# dynasty-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NOTES.md  README.md  fly.toml  pyproject.toml
docs/: league-context.md
docs/decisions/: 2026-04-21-tool-storage-app-scoping.md
docs/superpowers/plans/: 2026-04-19-dynasty-mcp-v1.md  2026-04-20-reset-optimizer.md  2026-04-21-http-transport-deploy.md  2026-04-21-reset-trades.md
docs/superpowers/specs/: 2026-04-19-dynasty-mcp-design.md  2026-04-20-reset-tools-design.md
examples/: config.toml
scripts/: record_fixtures.py
src/dynasty_mcp/: __main__.py  cache.py  config.py  context.py  models.py  reset_scoring.py  server.py
src/dynasty_mcp/sources/: fantasycalc.py  sleeper.py
src/dynasty_mcp/tools/: admin.py  draft.py  league.py  matchups.py  reset_optimizer.py  reset_trades.py  rosters.py  transactions.py  (+2 more)
tests/: test_cache.py  test_config.py  test_contract.py  test_fantasycalc.py  test_main.py  test_models.py  test_reset_optimizer.py  test_reset_scoring.py  test_reset_trades.py  test_server.py  test_sleeper.py
tests/fixtures/: fantasycalc_values.json  sleeper_draft.json  sleeper_drafts.json  sleeper_league.json  sleeper_matchups_week7.json  sleeper_players.json  sleeper_rosters.json  sleeper_state.json  sleeper_traded_picks.json  sleeper_trending_add.json  sleeper_user.json  sleeper_user_leagues.json  sleeper_users.json
tests/test_tools/: test_admin.py  test_draft.py  test_league.py  test_matchups.py  test_reset_optimizer.py  test_rosters.py  test_transactions.py  test_values.py  test_waivers.py
