[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynasty-mcp"
version = "0.1.0"
description = "Local MCP server for Sleeper dynasty fantasy football management"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
  "respx>=0.21",
]

[project.scripts]
dynasty-mcp = "dynasty_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dynasty_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
